# oxide

./: .dockerignore  .gitignore  AUTHENTICATION.md  AUTO_START_GUIDE.md  BROADCAST_MODE_IMPLEMENTATION.md  CLAUDE.md  CLUSTER_DISCOVERY_TEST_RESULTS.md  CONFIG_MIGRATION_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALLATION.md  PLAYWRIGHT_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TEST_IMPLEMENTATION_SUMMARY.md  TEST_PLAN.md  TEST_RESULTS.md  UI_IMPROVEMENTS_SUMMARY.md  WEB_UI_GUIDE.md  docker-compose.test.yml  package.json  playwright.config.js  pyproject.toml  pytest.ini  test_cluster_discovery.sh  test_lmstudio.py
.github/workflows/: ci.yml  deploy.yml  docs.yml  release.yml  security.yml
config/: default.yaml  models.yaml
docs/: configuration.md  package-lock.json
docs/docs/: intro.md
docs/docs/api/: mcp-tools.md  overview.md  websocket.md
docs/docs/architecture/: overview.md
docs/docs/examples/: python-api.md
docs/docs/guides/: deployment.md  installation.md  quickstart.md
oxide/: launcher.py
oxide/adapters/: base.py  cli_adapter.py  gemini.py  ollama_http.py  qwen.py
oxide/config/: loader.py
oxide/core/: classifier.py  orchestrator.py  router.py
oxide/execution/: parallel.py
oxide/mcp/: context.py  server.py  tools.py
oxide/utils/: cache.py  exceptions.py  logging.py  security.py
oxide/web/backend/: main.py  websocket.py
oxide/web/backend/routes/: monitoring.py  services.py  tasks.py
oxide/web/frontend/: index.html  package.json
oxide/web/frontend/src/: App.jsx  index.css
oxide/web/frontend/src/api/: client.js
oxide/web/frontend/src/components/: MetricsDashboard.jsx  ServiceCard.jsx
scripts/: migrate_json_to_sqlite.py  setup_lmstudio.sh  setup_ollama_remote.sh  start_all.sh  start_web_ui.sh  test_connection.py  test_network.py  test_ollama_integration.py  validate_config.py
src/oxide/: __init__.py
src/oxide/adapters/: cli_adapter.py  ollama_http.py  openrouter.py
src/oxide/analytics/: __init__.py  cost_tracker.py
src/oxide/cluster/: __init__.py  coordinator.py
src/oxide/config/: __main__.py  hot_reload.py  loader.py  migration.py
src/oxide/core/: classifier.py  orchestrator.py  router.py
src/oxide/mcp/: server.py  tools.py
src/oxide/memory/: context_memory.py
src/oxide/utils/: config_storage_sqlite.py  exceptions.py  logging.py  metrics_cache.py  path_validator.py  process_manager.py  routing_rules.py  service_manager.py  task_storage.py  task_storage_sqlite.py
src/oxide/web/backend/: main.py  middleware.py  websocket.py
src/oxide/web/backend/auth/: __init__.py  database.py  dependencies.py  models.py  utils.py
src/oxide/web/backend/routes/: __init__.py  api_keys.py  auth.py  cluster.py  config.py  costs.py  machines.py  memory.py  monitoring.py  routing.py  tasks.py
src/oxide/web/frontend/: .eslintrc.cjs  .gitignore  STORE_MIGRATION.md  UI_ENHANCEMENTS.md  components.json  package.json  tailwind.config.js
src/oxide/web/frontend/src/: App.jsx  index.css
src/oxide/web/frontend/src/api/: client.js
src/oxide/web/frontend/src/components/: CompactDashboard.jsx  ConfigurationPanel.jsx  ContextMemory.jsx  DashboardExample.jsx  MetricsDashboard.jsx  MinimalDashboard.jsx  MultiResponseViewer.jsx  ServiceCard.jsx  SystemMonitor.jsx  TaskAssignmentManager.jsx  TaskExecutor.jsx  TaskHistory.jsx  ThemeProvider.jsx  ThemeToggle.jsx  UltraCompactDashboard.jsx
src/oxide/web/frontend/src/components/ui/: Alert.jsx  Badge.jsx  Button.jsx  Card.jsx  CompactSystemBar.jsx  Dialog.jsx  EnhancedLLMMetrics.jsx  Input.jsx  LLMMetricsPanel.jsx  Progress.jsx  (+11 more)
src/oxide/web/frontend/src/hooks/: useMachines.js  useMetrics.js  useServices.js  useWebSocket.js
src/oxide/web/frontend/src/lib/: utils.js
src/oxide/web/frontend/src/store/: index.js  useStore.js
src/oxide/web/frontend/src/stores/: index.js  useMetricsStore.js  useServicesStore.js  useTasksStore.js  useUIStore.js  useWebSocketStore.js
tests/: README.md  __init__.py  conftest.py  run_all_tests.sh  test_backend_integration.py  test_cluster_coordinator.py  test_config_hot_reload.py  test_context_memory.py  test_cost_tracker.py  test_lm_studio_integration.py  test_memory_fix.py  test_metrics_cache.py  test_openrouter_free_models.py  test_openrouter_integration.py  test_path_security.py  test_process_cleanup.py  test_task_history_integration.py  test_websocket_manager.py
tests/e2e/: README.md  dashboard.spec.js  generate-screenshots.spec.js  smoke.spec.js  visual-regression.spec.js
tests/integration/: test_api_monitoring.py  test_api_services.py  test_api_tasks.py
tests/unit/: test_adapters.py  test_broadcast_mode.py  test_cache.py  test_classifier.py  test_mcp_tools.py  test_orchestrator.py  test_parallel.py  test_router.py  test_security.py  test_websocket.py
tests/unit/adapters/: test_cli_adapter.py  test_cli_base.py  test_http_adapter.py  test_ollama_http.py  test_qwen.py
tests/unit/core/: test_classifier.py  test_orchestrator.py  test_router.py
tests/unit/execution/: test_parallel.py
tests/unit/routes/: test_config.py  test_machines.py  test_routing.py
tests/unit/utils/: test_routing_rules.py
