[project]
name = "oxide"
version = "0.1.0"
description = "Intelligent LLM orchestration system for distributed AI resources"
readme = "README.md"
authors = [
    { name = "yayoboy", email = "esoglobine@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "psutil>=5.9.0",
    "websockets>=12.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
oxide-mcp = "oxide.mcp.server:main"
oxide-web = "oxide.web.backend.main:main"
oxide-all = "oxide.launcher:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
